--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongodb": "^6.9.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
