--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.7.2",
     "dotenv": "^16.4.5",
+    "jose": "^5.9.3",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongodb": "^6.9.0",
     "next": "14.2.14",
