--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cookie": "^0.7.2",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.7",
     "jose": "^5.9.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -18,6 +19,8 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
