--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.14.3",
